# DCHook

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  python-package.yml
dchook/: __init__.py  cli.py  webhook.py
tests/: test_imports.py  test_webhook.py  test_webhook_failure.py
